--- a/projects/crypto-currency/destemidos/App/src/pages/style.css
+++ b/projects/crypto-currency/destemidos/App/src/pages/style.css
@@ -1,23 +1,18 @@
-.feeds, .destemidos, .influencers, .markets{
-  margin-left: 10em;
-}
-
 .container{
-  max-width: 900px;
+  width: 100%;
   margin: 0 auto;
   align-self: center;
-  align-items: center;
-  height: 100vh;
+  align-items: center;  
 }
 
 .SliderView{
-  width: 900px;
+  width: 100%;
   text-align: right;
   margin: 0 auto;
 }
 
 .SliderTitle{
-  max-width: 900px;
+  width: 100%;
   text-align: left;
   margin: 0 auto;
 }
