--- a/projects/crypto-currency/destemidos/App/src/pages/Markets/style.css
+++ b/projects/crypto-currency/destemidos/App/src/pages/Markets/style.css
@@ -1,20 +1,27 @@
+.feeds, .destemidos, .influencers, .markets {
+  margin-left: 10em;
+}
 
-.container{
-  max-width: 900px;
-  margin: 0 auto;
+.box{
+  width: 90vw;
+  height: 100vh;
   align-self: center;
   align-items: center;
-  height: 100vh;
+  text-align: center;
+  margin: 0 0 0 100px;
+  padding: 10px;
+
 }
 
-.SliderView{
-  width: 900px;
+.box-table{
+  margin: 0px 0;
   text-align: right;
-  margin: 0 auto;
 }
 
-.SliderTitle{
-  max-width: 900px;
-  text-align: left;
-  margin: 0 auto;
+.btn-market-refrsh{
+  cursor: pointer;
+  width: 150px;
+  height: 25px;
+  color: #fff;
+  background: #11121b;
 }
