--- a/projects/crypto-currency/destemidos/App/src/pages/Feeds/Styles.css
+++ b/projects/crypto-currency/destemidos/App/src/pages/Feeds/Styles.css
@@ -2,6 +2,7 @@
   width: 900px;
   text-align: right;
   margin: 0 auto;
+  margin-top: 70px;
 }
 
 .SliderImage{
@@ -10,8 +11,8 @@
   margin: 0 auto;
 }
 
-.SliderTitle{
+/* .SliderTitle{
   max-width: 900px;
   text-align: left;
   margin: 0 auto;
-}
+} */
