--- a/projects/crypto-currency/destemidos/App/src/pages/Markets/style.css
+++ b/projects/crypto-currency/destemidos/App/src/pages/Markets/style.css
@@ -3,17 +3,18 @@
 }
 
 .box{
-  width: 90vw;
+  color: #fff;
+  background: #11121b;
+  width: 92.3vw;
   height: 100vh;
   align-self: center;
   align-items: center;
   text-align: center;
-  margin: 0 0 0 100px;
-  padding: 10px;
+  margin-left: 5.5em;
 }
 
 .box-table{
-  margin: 0px 0;
+  width: 100%;
   text-align: right;
 }
 
@@ -23,4 +24,6 @@
   height: 25px;
   color: #fff;
   background: #11121b;
+  border-radius: 0.3em;
+  margin-right: 8px;
 }
