--- a/projects/crypto-currency/iluminados/app/src/components/Influencer/style.css
+++ b/projects/crypto-currency/iluminados/app/src/components/Influencer/style.css
@@ -1,16 +1,33 @@
-.container{
+.page{
+    height: 100vh;
+    margin: 0 auto;
+    align-self: center;
     display: flex;
-    max-width: 1000px;
-    flex-wrap: wrap;
-    margin: 0 auto ;
-    justify-content: space-between;
 }
 
 .box{
-    margin: 40px 0;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    line-height: 30px;
+    margin: 30px;
 }
 
-.title{
+.container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    border: 1px solid #7c7c7c;
+    max-width: 400px;
+    border-radius: 10px;
+    margin: 0 auto;   
     align-self: center;
-    text-align: center;
+    padding: 20px;
+    background-color: rgb(255, 255, 255);
+}
+
+.img{
+    width: 150px;
+    height: 150px;
 }
