chore: integration with the backend in the sale of the cryptocurrency

--- a/projects/crypto-currency/destemidos/App/src/components/Sell/style.css
+++ b/projects/crypto-currency/destemidos/App/src/components/Sell/style.css
@@ -42,3 +42,13 @@
   justify-content: space-around;
   cursor: pointer;
 }
+
+.creditCoin{
+  width: 200px;
+  background: #dfdfdf;  
+  border-radius: 5px;
+  padding: 8px 8px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+}
